--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
   <title>BOTTIE</title>
 </head>
 <body>
- <img src="images/bottie.png>
+ <img src="images/bottie.png"
+      width="312"
+      height="156" />
+
 </body>
+</html>
