--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
   <title>BOTTIE</title>
 </head>
-<body>
- <img src="images/bottie.png"
-      width="312"
-      height="156" />
+<style>
+  img{
+    width: 312px;
+    height: 156px;
+    }
+  
+</style>
 
-</body>
-</html>
+
+
+
+
+
