--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <title>BOTTIE</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="BOTTIE BOT WEB">
+  <meta name="viewport" content="width-device-width, initial scale=1.0">
+  
 </head>
 <style>
   img{
@@ -10,8 +14,9 @@
     }
   h1{
     color: green;
-    size: 64;
     }
+
+    
 </style>
 </head>
 <body>
