--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <strong>BOTTIE</strong>
   </h1>
   <img src="images/botties.png">
+  <h1 class="learnmore">
+    BOTTIE COMMANDS
+  </h1>
+  <img class="botcmd" src="images/bottiess.png">
   
 
 
