--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h1 class="learnmore">
     BOTTIE COMMANDS
   </h1>
-  <img class="botcmd" src="images/bottiess.png">
+  <img class="botcmd" src="images/botssdss.png">
   
 
 
