--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
   h1{
     color: green;
     }
-
-    
+  learnmore{
+    color: yellow;
+    }
+  botcmd{
+    width: 468px;
+    height: 234px;
+    }
 </style>
 </head>
 <body>
