--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <h1 class="learnmore">
     BOTTIE COMMANDS
   </h1>
-  <img class="botcmd" src="images/botssdss.png">
+  <img class="botcmd" src="images/botssdss.png"
+       width="936"
+       height="1872" />
   
 
 
