--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     width: 1400px;
     height: 1400px;
     }
+  .help-1{
+    width: 250px;
+    height: 70px;
+    }
 </style>
 </head>
 <body>
@@ -36,6 +40,10 @@
   <img class="botcmd" src="images/botssdss.png"
        width="936"
        height="1872" />
+  <h2>
+    BOT COMMAND USES:
+  </h2>
+  <img class="help-1" src="https://telegra.ph/file/8aeac4ea8ad4205372df8.jpg">
   
 
 
