--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     width: 1400px;
     height: 444px;
     }
+  h2{
+    color: yellow;
+    font-size: 56px;
+    }
+  p1{
+    color: red;
+    font-size: 33px;
+    }
+  
 </style>
 </head>
 <body>
@@ -43,6 +52,7 @@
   <h2>
     BOT COMMAND USES:
   </h2>
+  <p1>COMMAND '?bot'</p1>
   <img class="help-1" src="https://telegra.ph/file/8aeac4ea8ad4205372df8.jpg">
   
 
