--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
   </h2>
   <p1>COMMAND '?bot'</p1>
   <img class="help-1" src="https://telegra.ph/file/8aeac4ea8ad4205372df8.jpg">
+  <p2>COMMAND '?start'</p2>
+  <img class="help-1" src="https://telegra.ph/file/b8f767338c6c53e677514.jpg">
   
 
 
