--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
     BOT COMMAND USES:
   </h2>
   <p1>COMMAND '?bot'</p1>
-  <img class="help-1" src="https://telegra.ph/file/8aeac4ea8ad4205372df8.jpg">
+  <img class="help-1" src="https://telegra.ph/file/8aeac4ea8ad4205372df8.jpg"><br>
   <p1>COMMAND '?start'</p1>
-  <img class="help-1" src="https://telegra.ph/file/b8f767338c6c53e677514.jpg">
-  
+  <img class="help-1" src="https://telegra.ph/file/b8f767338c6c53e677514.jpg"><br>
+  <p1>COMMAND '?uptime'</p1>
+  <img class="help-1" src="https://telegra.ph/file/e8371494c1efac653b4ef.jpg"><br>
 
 
 
