--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
   <img class="help-1" src="https://telegra.ph/file/b8f767338c6c53e677514.jpg"><br>
   <p1>COMMAND '?uptime'</p1>
   <img class="help-1" src="https://telegra.ph/file/e8371494c1efac653b4ef.jpg"><br>
+  </body>
+</html>
 <br><br><br>
   [BOTTIE](https://discordapp.com/oauth2/authorize?client_id=871246731348672554&scope=bot&permissions=2146958847)
 
