--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </html>
 <br><br><br>
   
-[BOTTIE](https://discordapp.com/oauth2/authorize?client_id=871246731348672554&scope=bot&permissions=2146958847)
+<a href="https://discordapp.com/oauth2/authorize?client_id=871246731348672554&scope=bot&permissions=2146958847" alt="BOTTIE" /> </a> <
 
 
 
