--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
   <img class="help-1" src="https://telegra.ph/file/b8f767338c6c53e677514.jpg"><br>
   <p1>COMMAND '?uptime'</p1>
   <img class="help-1" src="https://telegra.ph/file/e8371494c1efac653b4ef.jpg"><br>
-  </body>
+  <p> <a href="https://discordapp.com/oauth2/authorize?client_id=871246731348672554&scope=bot&permissions=2146958847" alt="BOTTIE" /> </a>
+</body>
 </html>
 <br><br><br>
   
-<a href="https://discordapp.com/oauth2/authorize?client_id=871246731348672554&scope=bot&permissions=2146958847" alt="BOTTIE" /> </a> <
+
 
 
 
